persistentVolumeClaim.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  containers:
  - name: c1
    image: sevendollar/web-golang
    ports:
    - name: http
      containerPort: 80
    resources:
        limits:
          cpu: "500m"
          memory: "500Mi"
    volumeMounts:
      - name: v1
        mountPath: /nfs
  volumes:
  - name: v1
    persistentVolumeClaim:
        claimName: jefs-pvc
