use-persistentVolume-directly.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jefs-pod-volume-test
spec:
  containers:
  - name: c1 
    image: sevendollar/web-golang
    resources:
      limits:
        cpu: "500m"
        memory: "500Mi"
    volumeMounts:
    - name: v1
      mountPath: /nfs
  volumes:
  - name: v1
    nfs:
      server: "10.7.12.3"
      path: /volume1/k8s
