service-externalName.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s
  labels:
    app: jef-test
spec:
  type: ExternalName
  externalName: k3s.cvl.local
  ports:
  - port: 6443
