web-golang.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-golang
  labels:
    name: web-golang
    type: frontend
spec:
  selector:
    matchLabels:
      name: web-golang
      owner: jef
  replicas: 4
  template:
    metadata:
      name: web-golang
      labels:
        name: web-golang
        owner: jef
    spec:
      containers:
      - name: web
        image: sevendollar/web-golang
        resources:
          limits:
            cpu: "250m"
            memory: "64Mi"
        ports:
        - containerPort: 80
          protocol: TCP


---
apiVersion: v1
kind: Service
metadata:
  name: web-golang
  labels:
    name: web-golang
spec:
  type: NodePort
  selector:
    name: web-golang
    owner: jef
  ports:
  - port: 8080
    targetPort: 80
