ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jef
  labels:
    app: lab
spec:
  rules:
  - host: jefsweb.cvl.local
    http:
      paths:
      - path: /hello
        backend:
          serviceName: jef
          servicePort: 9999

---
apiVersion: v1
kind: Service
metadata:
  name: jef
  labels:
    app: lab
spec:
  type: ClusterIP
  selector:
      name: jef
      app: lab
  ports:
  - port: 9999
    targetPort: 80
